--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.3",
+    "@angular/animations": "^12.0.5",
     "@angular/cdk": "^12.2.11",
     "@angular/common": "~12.0.3",
     "@angular/compiler": "~12.0.3",
@@ -22,6 +22,7 @@
     "@angular/router": "~12.0.3",
     "bootstrap": "^4.5.3",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
